--- a/latex/codelistings.tex
+++ b/latex/codelistings.tex
@@ -56,9 +56,11 @@
 	</p, <p, </p>,
 	% scripts
 	</script, <script,
+	% links
+	<a, </a,
   % More tags...
   <canvas, /canvas>, <svg, <rect, <animateTransform, </rect>, </svg>, <video, <source, <iframe, </iframe>, </video>, <image, </image>, <template, </template, <my-element, </my-element,
-  <speakur-discussion, </speakur-discussion
+  <speakur-discussion, </speakur-discussion, <twbs-navbar, </twbs-navbar
   },
   ndkeywords={
   % General
