--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -19,7 +19,7 @@ This report is a case study of using W3C Web Components,
 a proposed HTML5 extension,
 to implement techniques of encapsulation, abstraction, modularity in web application engineering.
 The author designed Speakur, a real-time discussion social plugin for the web, 
-as an experiment to determine the viability and maturity of using Web Components to create modern, highly composable web applications.
+as an experiment to determine the viability and maturity of using Web Components to create modern, highly composable web applications. Figure~\ref{f:demo1} shows an example of a Speakur discussion.
 
 Like most web applications Speakur is written in a combination of HTML markup and the Java\-script programming language. 
 HTML is a declarative markup language used to create documents --- web pages --- which are viewed with the help of a program called the browser. 
@@ -61,8 +61,8 @@ the name is an unfortunate coincidence at best.
 To complicate the naming situation even further, Javascript is officially standardized under the name ECMAScript (ES).}
 \index{Javascript}
 (JS) programming language to web browsers in 1995 allowed for a completely new dimension of dynamic behavior that was not possible before.
-Eventually web apps powered by Javascript like Gmail and Google Docs rivaled traditional desktop applications in functionality and usability while being instantly accessible from nearly anywhere.
-Still, web apps had to be stitched together `by hand' in ways that carefully ensured that the different parts didn't step on each other's toes, else disaster frequently ensued. 
+Eventually web apps like Gmail and Google Docs, powered by Javascript, rivaled traditional desktop applications in functionality and usability while being instantly accessible from nearly anywhere.
+Still, web apps had to be stitched together `by hand' in ways that carefully ensured the different parts didn't step on each other's toes, else disaster frequently ensued. 
 Each component or area of the system could not help but be coupled to the others at some level as a result of the programming model imposed by the DOM and HTML.
 
 Over the years the dynamic behaviors afforded by Javascript grew in importance along with the web, and helped contribute to its success. 
@@ -121,7 +121,7 @@ and the CSS Flexible Boxes
 and CSS Grid
 \index{CSS Grid}
 systems. 
-In part because these technologies are not yet formally accepted as W3C standards and are not yet widely implemented in typical mobile and desktop browsers, 
+In part because many of these technologies are not yet formally accepted as W3C standards and are not yet widely implemented in typical mobile and desktop browsers, 
 Speakur has been implemented using Google's experimental Polymer framework [CITE].
 Polymer provides a Javascript `polyfill'
 \index{polyfill}
@@ -147,11 +147,11 @@ The goal of this report is to demonstrate the application of software engineerin
 This report discusses many of the goals and principles of the Web Components initiative and how a number of different technologies taken together help raise the overall level of abstraction for content authors, web engineers, and application developers --- which I will refer to collectively as (web) authors for short.
 
 The Background section provides an introduction to some of the architectural problems inherent in modern web authoring and how Web Components (WC) address them. 
-It also provides some background on software engineering design patterns that are embodied in Web Components such as encapsulation and composition.
+It also provides some background the on software engineering design patterns that are embodied in Web Components such as encapsulation and composition.
 It describes some of the motivations behind the development of Speakur and some of the specific software engineering questions it addresses, such as the ability to provide a hassle-free way to host an embedded discussion forum inside an arbitrary web resource in a way that is fully encapsulated.
 
-The Approach section details the specific structures and techniques used when constructing a Web Component, and describes the high level software architecture choices that went into Speakur. 
-It describes how Speakur uses Web Components to implement encapsulated modules whose internals are protected from unintentional outside influence. 
+The Approach section describes the high level software architecture choices that went into Speakur and details the specific structures and techniques used when constructing a Web Component.
+It describes how Speakur uses WC to implement encapsulated modules whose internals are protected from unintentional outside influence. 
 It also describes how the choice of the Firebase cloud database service and its Websocket-based event notification system impacts Speakur's architecture.
 
 The Implementation section shows how to apply Web Component principles to the task of creating a flexible and generic discussion forum for both desktop and mobile browsers. 
