--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -1,49 +1,328 @@
-@BOOK{knuth:tb,
-  author = "Donald K. Knuth",
-  title = "The \TeX book",
-  publisher = "Addison-Wesley",
-  year = "1984",
-}
 
-@BOOK{leslie:dps,
-  author = "Leslie Lamport",
-  title = "\LaTeX: A document preparation system",
-  publisher = "Addison-Wesley",
-  year = "1994",
-  edition = "2nd",
-}
+@misc{googledevelopers2015,
+	title = {The Awesome Power of {Auto-Binding} Templates -- Polycasts \#08},
+	url = {https://www.youtube.com/watch?v=82LfXCeuaOo&feature=youtube_gdata_player},
+	abstract = {Super charge your app with Polymer data bindings.
 
-@BOOK{gms:tlc,
-  author = "M~Goosens, F~Mittelbach and A~Samarin",
-  title = "The \LaTeX Companion",
-  publisher = "Addison-Wesley",
-  year = "1994",
-}
+*** {CLICK} {"SHOW} {MORE"} {FOR} {LINKS} {TO} {EVERYTHING} ***
 
-@BOOK{spivak:jot,
-  author = "Michael Spivak",
-  title = "The joy of \TeX",
-  publisher = "American Mathematical Society",
-  year = "1990",
-  edition = "2nd",
-  address = "Providence, R.I.",
-}
+Polycasts: Core Drawer Panel
+{https://www.youtube.com/watch?v=GAjpaM4HcCQ\&index=5\&list=PLOU2XLYxmsII5c3Mgw6fNYCzaWrsM3sMN}
 
-@BOOK{bertin:psn,
-  author = "M.~J.~Bertin et al",
-  title = "Pisot and Salem Numbers",
-  publisher = "user Verlag",
-  address = "Berlin",
-  year = "1992",
-}
+Polycasts: Core Header Panel
+{https://www.youtube.com/watch?v=ZAc51\_0Xa\_M\&index=4\&list=PLOU2XLYxmsII5c3Mgw6fNYCzaWrsM3sMN}
 
-@TECHREPORT{poorten:sp,
-  author = "Alf~J.~van der Poorten",
-  title = "Some problems of recurrent interest",
-  institution = "School of Mathematics and Physics,
-                 Macquarie University",
-  address = "North Ryde, Australia 2113",
-  number = "81-0037",
-  month = "August",
-  year = "1981",
+Polycasts: Core Toolbar
+{https://www.youtube.com/watch?v=qDhHdi8RtwI\&list=PLOU2XLYxmsII5c3Mgw6fNYCzaWrsM3sMN\&index=3}
+
+Tag your tweets and posts with \#polycasts and let us know what you want to see!},
+	author = {Google Developers},
+	month = jan,
+	year = {2015}
+},
+
+@online{mozillacontributors2015,
+	title = {Using {CSS} flexible boxes},
+	url = {https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Flexible_boxes},
+	abstract = {The {CSS3} Flexible Box, or flexbox, is a layout mode providing for the arrangement of elements on a page such that the elements behave predictably when the page layout must accommodate different screen sizes and different display devices.},
+	journal = {Mozilla Developer Network},
+	author = {Mozilla Contributors},
+	year = {2015},
+	howpublished = {{https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Flexible\_boxes}}
+},
+
+@online{bowercontributors2015,
+	title = {Bower search},
+	url = {bower.io/search},
+	abstract = {Search for Bower packages. Bower is a package manager for the web.},
+	author = {Bower Contributors},
+	year = {2015},
+	howpublished = {bower.io/search}
+},
+
+@online{landerspreston2015,
+	title = {web component - Conditionally wrapping {\textless}content{\textgreater} insertion points in Polymer - Stack Overflow},
+	url = {http://stackoverflow.com/questions/28330000/conditionally-wrapping-content-insertion-points-in-polymer},
+	author = {Landers, Preston},
+	month = feb,
+	year = {2015},
+	howpublished = {http://stackoverflow.com/questions/28330000/conditionally-wrapping-content-insertion-points-in-polymer}
+},
+
+@online{zachte2015,
+	title = {Wikimedia Traffic Analysis Report - Browsers e.a.},
+	url = {https://stats.wikimedia.org/wikimedia/squids/SquidReportClients.htm},
+	author = {Zachte, Erik},
+	month = mar,
+	year = {2015},
+	note = {00001},
+	howpublished = {{https://stats.wikimedia.org/wikimedia/squids/SquidReportClients.htm}}
+},
+
+@book{strom2014,
+	title = {Patterns in Polymer},
+	url = {http://patternsinpolymer.com/},
+	author = {Strom, Chris},
+	year = {2014}
+},
+
+@online{imura2015,
+	title = {Creating a Polymer Chat App with Material Design},
+	url = {http://www.pubnub.com/blog/creating-a-polymer-chat-app-with-material-design/},
+	abstract = {In this tutorial, we'll show you how to build a fully featured mobile Polymer chat app using Polymer and...},
+	author = {Imura, Tomomi},
+	month = jan,
+	year = {2015},
+	howpublished = {http://www.pubnub.com/blog/creating-a-polymer-chat-app-with-material-design/}
+},
+
+@misc{strom2014-a,
+	title = {japh(r) by Chris Strom: I18next, Polymer and Pluralization},
+	shorttitle = {japh(r) by Chris Strom},
+	url = {http://japhr.blogspot.com/2014/02/i18next-polymer-and-pluralization.html},
+	journal = {japh(r) by Chris Strom},
+	author = {Strom, Chris},
+	month = feb,
+	year = {2014},
+	keywords = {chain, i18n, javascript, polymer}
+},
+
+@online{landers2015,
+	title = {Polymer: adding implicit arguments to function calls in expressions - Stack Overflow},
+	shorttitle = {Polymer},
+	url = {http://stackoverflow.com/questions/28530725/polymer-adding-implicit-arguments-to-function-calls-in-expressions},
+	author = {Landers, Preston},
+	month = feb,
+	year = {2015},
+	howpublished = {http://stackoverflow.com/questions/28530725/polymer-adding-implicit-arguments-to-function-calls-in-expressions}
+},
+
+@techreport{hickson2014,
+	type = {{W3C} Recommendation 28 October 2014},
+	title = {{HTML5} A vocabulary and associated {APIs} for {HTML} and {XHTML}},
+	institution = {{W3C}},
+	author = {Hickson, Ian and Berjon, Robin and Faulkner, Steve and Leithead, Travis and Navara, Erika Doyle and {O'Connor}, Edward and Pfeiffer, Silvia},
+	month = oct,
+	year = {2014},
+	note = {{http://www.w3.org/TR/2014/REC-html5-20141028/}}
+},
+
+@book{macdonald2013,
+	edition = {2nd},
+	title = {{HTML5:} The Missing Manual},
+	publisher = {" {O'Reilly} Media, Inc."},
+	author = {{MacDonald}, Matthew},
+	year = {2013}
+},
+
+@misc{clark2011,
+	title = {Avoiding common {HTML5} mistakes},
+	url = {http://html5doctor.com/avoiding-common-html5-mistakes/},
+	author = {Clark, Richard},
+	month = jul,
+	year = {2011}
+},
+
+@online{precht2014,
+	title = {Inheritance and composition with Polymer {\textperiodcentered} Pascal Precht},
+	url = {https://pascalprecht.github.io/2014/07/14/inheritance-and-composition-with-polymer/},
+	author = {Precht, Pascal},
+	month = jul,
+	year = {2014},
+	howpublished = {https://pascalprecht.github.io/2014/07/14/inheritance-and-composition-with-polymer/}
+},
+
+@online{landers2015-a,
+	title = {Eurgh! translation software},
+	url = {https://github.com/Preston-Landers/eurgh},
+	abstract = {eurgh - Eurgh translation utility using Microsoft Translate {API}},
+	journal = {{GitHub}},
+	author = {Landers, Preston},
+	month = feb,
+	year = {2015},
+	note = {00000},
+	howpublished = {{https://github.com/Preston-Landers/eurgh}}
+},
+
+@online{w3ccontributors2015,
+	title = {Shadow {DOM}},
+	url = {http://w3c.github.io/webcomponents/spec/shadow/},
+	abstract = {This specification describes a method of combining multiple {DOM} trees into one hierarchy and how these trees interact with each other within a document, thus enabling better composition of the {DOM.}},
+	author = {{W3C} contributors},
+	month = mar,
+	year = {2015},
+	note = {00002},
+	howpublished = {http://w3c.github.io/webcomponents/spec/shadow/}
+},
+
+@online{w3ccontributors2015-a,
+	title = {{HTML} Imports},
+	url = {http://w3c.github.io/webcomponents/spec/imports/},
+	abstract = {{HTML} Imports are a way to include and reuse {HTML} documents in other {HTML} documents.},
+	author = {{W3C} contributors},
+	month = mar,
+	year = {2015},
+	note = {00000},
+	howpublished = {http://w3c.github.io/webcomponents/spec/imports/}
+},
+
+@online{w3ccontributors2015-b,
+	title = {Custom Elements},
+	url = {http://w3c.github.io/webcomponents/spec/custom/},
+	abstract = {This specification describes the method for enabling the author to define and use new types of {DOM} elements in a document.},
+	author = {{W3C} contributors},
+	month = mar,
+	year = {2015},
+	note = {00104},
+	howpublished = {http://w3c.github.io/webcomponents/spec/custom/},
+	annote = {Editor Dimitri Glazkov,~Google, {\textless}dglazkov@chromium.org{\textgreater}}
+},
+
+@online{w3ccontributors2015-c,
+	title = {Template element},
+	url = {https://html.spec.whatwg.org/multipage/scripting.html#the-template-element},
+	abstract = {The template element is used to declare fragments of {HTML} that can be cloned and inserted in the document by script.},
+	author = {{W3C} contributors},
+	month = mar,
+	year = {2015},
+	note = {00002},
+	howpublished = {https://html.spec.whatwg.org/multipage/scripting.html\#the-template-element}
+},
+
+@online{rota2015,
+	title = {Complementarity of React and Web Components {\textemdash} {WebComponents.org}},
+	url = {http://webcomponents.org/presentations/complementarity-of-react-and-web-components-at-reactjs-conf},
+	abstract = {The component driven, performance focused approach of React is a perfect
+complement to the modularity and portability of native {HTML} Web Components.},
+	author = {Rota, Andrew},
+	month = jan,
+	year = {2015},
+	note = {00000},
+	howpublished = {http://webcomponents.org/presentations/complementarity-of-react-and-web-components-at-reactjs-conf}
+},
+
+@misc{googledevelopers2015-a,
+	title = {Easier website development with Web Components and {JSON-LD}},
+	url = {http://googlewebmastercentral.blogspot.com/2015/03/easier-website-development-with-web.html},
+	journal = {Official Google Webmaster Central Blog},
+	author = {Google Developers},
+	month = mar,
+	year = {2015},
+	note = {00000}
+},
+
+@online{gasperowicz2015,
+	title = {Creating semantic sites with Web Components and {JSON-LD} - {HTML5} Rocks},
+	url = {/2015/03/creating-semantic-sites-with-web-components-and-jsonld},
+	abstract = {Add schema.org markup to your components and make them search engine friendly.},
+	journal = {{HTML5} Rocks - A resource for open web {HTML5} developers},
+	author = {Gasperowicz, Ewa},
+	month = mar,
+	year = {2015},
+	note = {00000},
+	howpublished = {/2015/03/creating-semantic-sites-with-web-components-and-jsonld}
+},
+
+@misc{meligy2015,
+	title = {The Longest {Write-Up} On ng-conf, {AngularJS} 1.3, 1.4, 1.5 {AND} 2.0 Yet -- Or -- Meligy{\textquoteright}s {AngularJS} \& Web Dev Goodies {\textemdash} Issue10},
+	url = {http://gurustop.net/newsletter/10},
+	abstract = {Hello there, This is a special issue of the {AngularJS} and Web Dev newsletter. In this issue I'll be talking only {AngularJS}, only ng-conf 2015, and specifically about the things we now know about An...},
+	journal = {{GuruStop.NET} By {@Meligy}},
+	author = {Meligy},
+	month = mar,
+	year = {2015},
+	note = {00000}
+},
+
+@online{bidelman2015,
+	title = {Using Polymer in a {WebView} - Polymer},
+	url = {https://www.polymer-project.org/0.5/articles/webview.html},
+	abstract = {How to setup Polymer in an Android {WebView} app},
+	author = {Bidelman, Eric},
+	month = mar,
+	year = {2015},
+	note = {00000},
+	howpublished = {https://www.polymer-project.org/0.5/articles/webview.html}
+},
+
+@online{marz2011,
+	title = {How to beat the {CAP} theorem - thoughts from the red planet - thoughts from the red planet},
+	url = {http://nathanmarz.com/blog/how-to-beat-the-cap-theorem.html},
+	abstract = {The {CAP} theorem states a database cannot guarantee consistency, availability, and partition-tolera...},
+	author = {Marz, Nathan},
+	month = oct,
+	year = {2011},
+	note = {00000},
+	howpublished = {http://nathanmarz.com/blog/how-to-beat-the-cap-theorem.html}
+},
+
+@online{berners-lee1993,
+	title = {Hypertext Markup Language {(HTML)}},
+	url = {http://www.w3.org/MarkUp/draft-ietf-iiir-html-01.txt},
+	author = {{Berners-Lee}, Tim},
+	month = jun,
+	year = {1993},
+	note = {00000},
+	howpublished = {{http://www.w3.org/MarkUp/draft-ietf-iiir-html-01.txt}}
+},
+
+@phdthesis{fielding2000,
+	title = {Architectural styles and the design of network-based software architectures},
+	school = {University of California, Irvine},
+	author = {Fielding, Roy Thomas},
+	year = {2000}
+},
+
+@misc{vieira2015,
+	title = {{HTML5} Local Storage Revisited},
+	url = {http://www.sitepoint.com/html5-local-storage-revisited/},
+	abstract = {Luis Vieira discusses how to use local storage, part of the {HTML5} Web Storage {API}, to improve the performance of a website.},
+	journal = {{SitePoint}},
+	author = {Vieira, Luis},
+	month = mar,
+	year = {2015}
+},
+
+@book{mitchell2003,
+	address = {Cambridge, {U.K.} ; New York},
+	title = {Concepts in programming languages},
+	isbn = {0521780985},
+	lccn = {{QA76.6} {.M5293} 2003},
+	publisher = {Cambridge University Press},
+	author = {Mitchell, John C.},
+	year = {2003},
+	keywords = {Programming languages {(Electronic} computers)},
+	annote = {Includes index}
+},
+
+@misc{ihrig2012,
+	title = {The Basics of the Shadow {DOM}},
+	url = {http://www.sitepoint.com/the-basics-of-the-shadow-dom/},
+	abstract = {Modern websites often contain data and widgets from multiple sources, mashed up on a single page. For example, a single site can easily contain a {YouTube} video player, a Facebook {{\textquotedblleft}Like{\textquotedblright}} button, a Twitter {{\textquotedblleft}Tweet{\textquotedblright}} button, and much more. The fact that code from so many vendors can coexist on a single page is nothing {\textellipsis}},
+	journal = {{SitePoint}},
+	author = {Ihrig, Colin},
+	month = aug,
+	year = {2012}
+},
+
+@misc{bootstrapcontributors2015,
+	title = {Twitter Bootstrap},
+	url = {http://getbootstrap.com/},
+	author = {Bootstrap contributors},
+	month = mar,
+	year = {2015}
+},
+
+@misc{x-tagscontributors2015,
+	title = {{X-Tags}},
+	url = {http://www.x-tags.org/},
+	author = {{X-Tags} contributors},
+	year = {2015}
+},
+
+@misc{polymercontributors2015,
+	title = {Polymer},
+	url = {https://www.polymer-project.org/0.5/docs/start/everything.html},
+	author = {Polymer contributors},
+	year = {2015}
 }
