A lot of citation cleanup.

--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -1,7 +1,17 @@
 
-@misc{googledevelopers2015,
+@book{fowler2012,
+	series = {{Addison-Wesley} Signature Series {(Fowler)}},
+	title = {Patterns of Enterprise Application Architecture},
+	isbn = {9780133065213},
+	url = {http://books.google.com/books?id=vqTfNFDzzdIC},
+	publisher = {Pearson Education},
+	author = {Fowler, M.},
+	year = {2012}
+},
+
+@online{googledevelopers2015,
 	title = {The Awesome Power of {Auto-Binding} Templates -- Polycasts \#08},
-	url = {https://www.youtube.com/watch?v=82LfXCeuaOo&feature=youtube_gdata_player},
+	url = {https://www.youtube.com/watch?v=82LfXCeuaOo},
 	abstract = {Super charge your app with Polymer data bindings.
 
 *** {CLICK} {"SHOW} {MORE"} {FOR} {LINKS} {TO} {EVERYTHING} ***
@@ -18,7 +28,8 @@ Polycasts: Core Toolbar
 Tag your tweets and posts with \#polycasts and let us know what you want to see!},
 	author = {Google Developers},
 	month = jan,
-	year = {2015}
+	year = {2015},
+	howpublished = {{https://www.youtube.com/watch?v=82LfXCeuaOo}}
 },
 
 @online{mozillacontributors2015,
@@ -32,7 +43,7 @@ Tag your tweets and posts with \#polycasts and let us know what you want to see!
 },
 
 @online{bowercontributors2015,
-	title = {Bower search},
+	title = {Bower},
 	url = {bower.io/search},
 	abstract = {Search for Bower packages. Bower is a package manager for the web.},
 	author = {Bower Contributors},
@@ -40,8 +51,8 @@ Tag your tweets and posts with \#polycasts and let us know what you want to see!
 	howpublished = {bower.io/search}
 },
 
-@online{landerspreston2015,
-	title = {web component - Conditionally wrapping {\textless}content{\textgreater} insertion points in Polymer - Stack Overflow},
+@online{landers2015,
+	title = {Conditionally wrapping {\textless}content{\textgreater} insertion points in Polymer},
 	url = {http://stackoverflow.com/questions/28330000/conditionally-wrapping-content-insertion-points-in-polymer},
 	author = {Landers, Preston},
 	month = feb,
@@ -55,15 +66,15 @@ Tag your tweets and posts with \#polycasts and let us know what you want to see!
 	author = {Zachte, Erik},
 	month = mar,
 	year = {2015},
-	note = {00001},
 	howpublished = {{https://stats.wikimedia.org/wikimedia/squids/SquidReportClients.htm}}
 },
 
-@book{strom2014,
+@online{strom2014,
 	title = {Patterns in Polymer},
 	url = {http://patternsinpolymer.com/},
 	author = {Strom, Chris},
-	year = {2014}
+	year = {2014},
+	howpublished = {http://patternsinpolymer.com/}
 },
 
 @online{imura2015,
@@ -76,18 +87,19 @@ Tag your tweets and posts with \#polycasts and let us know what you want to see!
 	howpublished = {http://www.pubnub.com/blog/creating-a-polymer-chat-app-with-material-design/}
 },
 
-@misc{strom2014-a,
-	title = {japh(r) by Chris Strom: I18next, Polymer and Pluralization},
+@online{strom2014-a,
+	title = {I18next, Polymer and Pluralization},
 	shorttitle = {japh(r) by Chris Strom},
 	url = {http://japhr.blogspot.com/2014/02/i18next-polymer-and-pluralization.html},
 	journal = {japh(r) by Chris Strom},
 	author = {Strom, Chris},
 	month = feb,
 	year = {2014},
-	keywords = {chain, i18n, javascript, polymer}
+	keywords = {chain, i18n, javascript, polymer},
+	howpublished = {http://japhr.blogspot.com/2014/02/i18next-polymer-and-pluralization.html}
 },
 
-@online{landers2015,
+@online{landers2015-a,
 	title = {Polymer: adding implicit arguments to function calls in expressions - Stack Overflow},
 	shorttitle = {Polymer},
 	url = {http://stackoverflow.com/questions/28530725/polymer-adding-implicit-arguments-to-function-calls-in-expressions},
@@ -110,21 +122,22 @@ Tag your tweets and posts with \#polycasts and let us know what you want to see!
 @book{macdonald2013,
 	edition = {2nd},
 	title = {{HTML5:} The Missing Manual},
-	publisher = {" {O'Reilly} Media, Inc."},
+	publisher = {{O'Reilly} Media, Inc.},
 	author = {{MacDonald}, Matthew},
 	year = {2013}
 },
 
-@misc{clark2011,
+@online{clark2011,
 	title = {Avoiding common {HTML5} mistakes},
 	url = {http://html5doctor.com/avoiding-common-html5-mistakes/},
 	author = {Clark, Richard},
 	month = jul,
-	year = {2011}
+	year = {2011},
+	howpublished = {http://html5doctor.com/avoiding-common-html5-mistakes/}
 },
 
 @online{precht2014,
-	title = {Inheritance and composition with Polymer {\textperiodcentered} Pascal Precht},
+	title = {Inheritance and composition with Polymer},
 	url = {https://pascalprecht.github.io/2014/07/14/inheritance-and-composition-with-polymer/},
 	author = {Precht, Pascal},
 	month = jul,
@@ -132,15 +145,13 @@ Tag your tweets and posts with \#polycasts and let us know what you want to see!
 	howpublished = {https://pascalprecht.github.io/2014/07/14/inheritance-and-composition-with-polymer/}
 },
 
-@online{landers2015-a,
+@online{landers2015-b,
 	title = {Eurgh! translation software},
 	url = {https://github.com/Preston-Landers/eurgh},
-	abstract = {eurgh - Eurgh translation utility using Microsoft Translate {API}},
-	journal = {{GitHub}},
+	abstract = {Eurgh! is a translation utility using Microsoft Translate {API}},
 	author = {Landers, Preston},
 	month = feb,
 	year = {2015},
-	note = {00000},
 	howpublished = {{https://github.com/Preston-Landers/eurgh}}
 },
 
@@ -151,7 +162,6 @@ Tag your tweets and posts with \#polycasts and let us know what you want to see!
 	author = {{W3C} contributors},
 	month = mar,
 	year = {2015},
-	note = {00002},
 	howpublished = {http://w3c.github.io/webcomponents/spec/shadow/}
 },
 
@@ -162,7 +172,6 @@ Tag your tweets and posts with \#polycasts and let us know what you want to see!
 	author = {{W3C} contributors},
 	month = mar,
 	year = {2015},
-	note = {00000},
 	howpublished = {http://w3c.github.io/webcomponents/spec/imports/}
 },
 
@@ -173,7 +182,6 @@ Tag your tweets and posts with \#polycasts and let us know what you want to see!
 	author = {{W3C} contributors},
 	month = mar,
 	year = {2015},
-	note = {00104},
 	howpublished = {http://w3c.github.io/webcomponents/spec/custom/},
 	annote = {Editor Dimitri Glazkov,~Google, {\textless}dglazkov@chromium.org{\textgreater}}
 },
@@ -185,74 +193,70 @@ Tag your tweets and posts with \#polycasts and let us know what you want to see!
 	author = {{W3C} contributors},
 	month = mar,
 	year = {2015},
-	note = {00002},
 	howpublished = {https://html.spec.whatwg.org/multipage/scripting.html\#the-template-element}
 },
 
 @online{rota2015,
-	title = {Complementarity of React and Web Components {\textemdash} {WebComponents.org}},
+	title = {Complementarity of React and Web Components},
 	url = {http://webcomponents.org/presentations/complementarity-of-react-and-web-components-at-reactjs-conf},
 	abstract = {The component driven, performance focused approach of React is a perfect
 complement to the modularity and portability of native {HTML} Web Components.},
 	author = {Rota, Andrew},
 	month = jan,
 	year = {2015},
-	note = {00000},
 	howpublished = {http://webcomponents.org/presentations/complementarity-of-react-and-web-components-at-reactjs-conf}
 },
 
-@misc{googledevelopers2015-a,
+@online{googledevelopers2015-a,
 	title = {Easier website development with Web Components and {JSON-LD}},
 	url = {http://googlewebmastercentral.blogspot.com/2015/03/easier-website-development-with-web.html},
 	journal = {Official Google Webmaster Central Blog},
 	author = {Google Developers},
 	month = mar,
 	year = {2015},
-	note = {00000}
+	note = {00000},
+	howpublished = {http://googlewebmastercentral.blogspot.com/2015/03/easier-website-development-with-web.html}
 },
 
 @online{gasperowicz2015,
-	title = {Creating semantic sites with Web Components and {JSON-LD} - {HTML5} Rocks},
-	url = {/2015/03/creating-semantic-sites-with-web-components-and-jsonld},
+	title = {Creating semantic sites with Web Components and {JSON-LD}},
+	url = {http://updates.html5rocks.com/2015/03/creating-semantic-sites-with-web-components-and-jsonld},
 	abstract = {Add schema.org markup to your components and make them search engine friendly.},
 	journal = {{HTML5} Rocks - A resource for open web {HTML5} developers},
 	author = {Gasperowicz, Ewa},
 	month = mar,
 	year = {2015},
-	note = {00000},
-	howpublished = {/2015/03/creating-semantic-sites-with-web-components-and-jsonld}
+	howpublished = {http://updates.html5rocks.com/2015/03/creating-semantic-sites-with-web-components-and-jsonld}
 },
 
-@misc{meligy2015,
-	title = {The Longest {Write-Up} On ng-conf, {AngularJS} 1.3, 1.4, 1.5 {AND} 2.0 Yet -- Or -- Meligy{\textquoteright}s {AngularJS} \& Web Dev Goodies {\textemdash} Issue10},
+@online{meligy2015,
+	title = {The Longest {Write-Up} On ng-conf, {AngularJS} 1.3, 1.4, 1.5 {AND} 2.0 Yet},
 	url = {http://gurustop.net/newsletter/10},
 	abstract = {Hello there, This is a special issue of the {AngularJS} and Web Dev newsletter. In this issue I'll be talking only {AngularJS}, only ng-conf 2015, and specifically about the things we now know about An...},
 	journal = {{GuruStop.NET} By {@Meligy}},
 	author = {Meligy},
 	month = mar,
 	year = {2015},
-	note = {00000}
+	howpublished = {http://gurustop.net/newsletter/10}
 },
 
 @online{bidelman2015,
-	title = {Using Polymer in a {WebView} - Polymer},
+	title = {Using Polymer in a {WebView}},
 	url = {https://www.polymer-project.org/0.5/articles/webview.html},
 	abstract = {How to setup Polymer in an Android {WebView} app},
 	author = {Bidelman, Eric},
 	month = mar,
 	year = {2015},
-	note = {00000},
 	howpublished = {https://www.polymer-project.org/0.5/articles/webview.html}
 },
 
 @online{marz2011,
-	title = {How to beat the {CAP} theorem - thoughts from the red planet - thoughts from the red planet},
+	title = {How to beat the {CAP} theorem},
 	url = {http://nathanmarz.com/blog/how-to-beat-the-cap-theorem.html},
 	abstract = {The {CAP} theorem states a database cannot guarantee consistency, availability, and partition-tolera...},
 	author = {Marz, Nathan},
 	month = oct,
 	year = {2011},
-	note = {00000},
 	howpublished = {http://nathanmarz.com/blog/how-to-beat-the-cap-theorem.html}
 },
 
@@ -262,7 +266,6 @@ complement to the modularity and portability of native {HTML} Web Components.},
 	author = {{Berners-Lee}, Tim},
 	month = jun,
 	year = {1993},
-	note = {00000},
 	howpublished = {{http://www.w3.org/MarkUp/draft-ietf-iiir-html-01.txt}}
 },
 
@@ -273,14 +276,15 @@ complement to the modularity and portability of native {HTML} Web Components.},
 	year = {2000}
 },
 
-@misc{vieira2015,
+@online{vieira2015,
 	title = {{HTML5} Local Storage Revisited},
 	url = {http://www.sitepoint.com/html5-local-storage-revisited/},
 	abstract = {Luis Vieira discusses how to use local storage, part of the {HTML5} Web Storage {API}, to improve the performance of a website.},
 	journal = {{SitePoint}},
 	author = {Vieira, Luis},
 	month = mar,
-	year = {2015}
+	year = {2015},
+	howpublished = {http://www.sitepoint.com/html5-local-storage-revisited/}
 },
 
 @book{mitchell2003,
@@ -295,34 +299,213 @@ complement to the modularity and portability of native {HTML} Web Components.},
 	annote = {Includes index}
 },
 
-@misc{ihrig2012,
+@online{ihrig2012,
 	title = {The Basics of the Shadow {DOM}},
 	url = {http://www.sitepoint.com/the-basics-of-the-shadow-dom/},
 	abstract = {Modern websites often contain data and widgets from multiple sources, mashed up on a single page. For example, a single site can easily contain a {YouTube} video player, a Facebook {{\textquotedblleft}Like{\textquotedblright}} button, a Twitter {{\textquotedblleft}Tweet{\textquotedblright}} button, and much more. The fact that code from so many vendors can coexist on a single page is nothing {\textellipsis}},
 	journal = {{SitePoint}},
 	author = {Ihrig, Colin},
 	month = aug,
-	year = {2012}
+	year = {2012},
+	howpublished = {http://www.sitepoint.com/the-basics-of-the-shadow-dom/}
 },
 
-@misc{bootstrapcontributors2015,
+@online{bootstrapcontributors2015,
 	title = {Twitter Bootstrap},
 	url = {http://getbootstrap.com/},
 	author = {Bootstrap contributors},
 	month = mar,
-	year = {2015}
+	year = {2015},
+	howpublished = {http://getbootstrap.com/}
 },
 
-@misc{x-tagscontributors2015,
+@online{x-tagscontributors2015,
 	title = {{X-Tags}},
 	url = {http://www.x-tags.org/},
 	author = {{X-Tags} contributors},
-	year = {2015}
+	year = {2015},
+	howpublished = {http://www.x-tags.org/}
 },
 
-@misc{polymercontributors2015,
+@online{polymercontributors2015,
 	title = {Polymer},
 	url = {https://www.polymer-project.org/0.5/docs/start/everything.html},
 	author = {Polymer contributors},
-	year = {2015}
+	year = {2015},
+	howpublished = {https://www.polymer-project.org/0.5/docs/start/everything.html}
+},
+
+@online{googledevelopers2015-b,
+	title = {{AngularJS}},
+	shorttitle = {Angular},
+	url = {https://angularjs.org/},
+	author = {Google Developers},
+	month = mar,
+	year = {2015},
+	howpublished = {https://angularjs.org/}
+},
+
+@online{reactcontributors2015,
+	title = {React},
+	url = {http://facebook.github.io/react/},
+	author = {React contributors},
+	year = {2015},
+	howpublished = {http://facebook.github.io/react/}
+},
+
+@online{santiagoesteva2015,
+	title = {{AngularJS} 2 Status Preview},
+	url = {http://ng-learn.org/2014/03/AngularJS-2-Status-Preview/},
+	abstract = {Preview of Angular 2 development status},
+	author = {Santiago Esteva},
+	month = mar,
+	year = {2015},
+	note = {00002},
+	howpublished = {{http://ng-learn.org/2014/03/AngularJS-2-Status-Preview/}}
+},
+
+@book{dickey2014,
+	series = {Develop and Design},
+	title = {Write Modern Web Apps with the {MEAN} Stack: Mongo, Express, {AngularJS}, and Node.js},
+	isbn = {9780133962376},
+	url = {http://books.google.com/books?id=UEOZBAAAQBAJ},
+	publisher = {Pearson Education},
+	author = {Dickey, J.},
+	year = {2014}
+},
+
+@online{w3c2015,
+	title = {Web Applications Working Group},
+	url = {http://www.w3.org/2008/webapps/},
+	author = {{W3C}},
+	year = {2015},
+	howpublished = {http://www.w3.org/2008/webapps/}
+},
+
+@online{yveslafon2015,
+	title = {Web Applications Working Group Charter},
+	url = {http://www.w3.org/2014/06/webapps-charter.html},
+	author = {Yves Lafon and Xiaoqian Wu and Art Barstow and Charles {McCathieNevile}},
+	year = {2015},
+	howpublished = {http://www.w3.org/2014/06/webapps-charter.html}
+},
+
+@online{internetlivestats.com2015,
+	title = {Total Number of Websites},
+	url = {http://www.internetlivestats.com/total-number-of-websites/},
+	journal = {{InternetLiveStats.com}},
+	author = {{InternetLiveStats.com}},
+	month = mar,
+	year = {2015},
+	howpublished = {http://www.internetlivestats.com/total-number-of-websites/}
+},
+
+@online{w3ccontributors2012,
+	title = {A Short History of Javascript},
+	url = {https://www.w3.org/community/webed/wiki/A_Short_History_of_JavaScript},
+	author = {{W3C} contributors},
+	month = feb,
+	year = {2012},
+	howpublished = {{https://www.w3.org/community/webed/wiki/A\_Short\_History\_of\_JavaScript}}
+},
+
+@online{allenpike2015,
+	title = {A {JS} Framework on every table},
+	url = {http://www.allenpike.com/2015/javascript-framework-fatigue/},
+	author = {Allen Pike},
+	month = feb,
+	year = {2015},
+	howpublished = {http://www.allenpike.com/2015/javascript-framework-fatigue/}
+},
+
+@online{landers2015-c,
+	title = {{Speakur-Discussion}},
+	url = {https://github.com/Preston-Landers/speakur-discussion},
+	abstract = {An {HTML5} Web Component Custom Element to implement a disscussion forum for a blog or other website.},
+	author = {Landers, Preston},
+	month = mar,
+	year = {2015},
+	howpublished = {{https://github.com/Preston-Landers/speakur-discussion}}
+},
+
+@online{landers2015-d,
+	title = {Speakur Demo},
+	url = {https://preston-landers.github.io/speakur-discussion/components/speakur-discussion/demo.html},
+	abstract = {Demonstration page for {Speakur-Discussion} custom element},
+	author = {Landers, Preston},
+	month = mar,
+	year = {2015},
+	howpublished = {https://preston-landers.github.io/speakur-discussion/components/speakur-discussion/demo.html}
+},
+
+@online{firebasecontributors2015,
+	title = {Firebase},
+	url = {https://www.firebase.com/},
+	author = {Firebase contributors},
+	month = mar,
+	year = {2015},
+	howpublished = {https://www.firebase.com/}
+},
+
+@online{penades2015,
+	title = {An Introduction to Web Components},
+	url = {http://webcomponents.org/presentations/an-introduction-to-web-components-at-web-components-london},
+	abstract = {The first meetup held at Web Components London focuses on introducing the basics
+of creating Web Components \& working with them in your applications. Soledad
+explores the spec, Polymer, {X-Tag}, and how to publish components so others in
+the community can benefit from them as well.},
+	author = {Penades, Soledad},
+	month = jan,
+	year = {2015},
+	howpublished = {http://webcomponents.org/presentations/an-introduction-to-web-components-at-web-components-london}
+},
+
+@online{bidelman2013,
+	title = {{HTML} Imports},
+	url = {http://www.html5rocks.com/en/tutorials/webcomponents/imports/},
+	abstract = {{HTML} Imports - \#include for the web},
+	author = {Bidelman, Eric},
+	month = dec,
+	year = {2013},
+	howpublished = {http://www.html5rocks.com/en/tutorials/webcomponents/imports/}
+},
+
+@online{walton2014,
+	title = {Web Components and the Future of {CSS}},
+	url = {http://webcomponents.org/presentations/web-components-and-the-future-of-css/},
+	abstract = {Philip Walton explains how, with Web Components, we finally have real style scoping and a proper abstraction mechanism. Now we can write truly modular {CSS.}},
+	author = {Walton, Phillip},
+	month = nov,
+	year = {2014},
+	howpublished = {http://webcomponents.org/presentations/web-components-and-the-future-of-css/}
+},
+
+@online{kitamura2014,
+	title = {Introduction to Shadow {DOM}},
+	url = {http://webcomponents.org/articles/introduction-to-shadow-dom/},
+	author = {Kitamura, Eiji},
+	month = oct,
+	year = {2014},
+	howpublished = {http://webcomponents.org/articles/introduction-to-shadow-dom/}
+},
+
+@online{webcomponentscontributors????,
+	title = {Ten Principles for Great General Purpose Web Components},
+	url = {https://github.com/basic-web-components/components-dev},
+	abstract = {This page lays out a set of principles for creating general-purpose web components that can be readily adopted in a wide range of sites and application. These principles guide the open source basic-web-components project, but anyone creating components for a wide audience may find these helpful. If you'd like to help make the web a better place, please consider applying these principles to your components.},
+	journal = {{GitHub}},
+	author = {Web Components contributors},
+	howpublished = {https://github.com/basic-web-components/components-dev}
+},
+
+@online{bidelman2014,
+	title = {Shadow {DOM} 201: {CSS} and Styling - {HTML5} Rocks},
+	shorttitle = {Shadow {DOM} 201},
+	url = {http://www.html5rocks.com/en/tutorials/webcomponents/shadowdom-201/},
+	abstract = {Learn about {CSS} styling options in Shadow {DOM.}},
+	journal = {{HTML5} Rocks - A resource for open web {HTML5} developers},
+	author = {Bidelman, Eric},
+	month = apr,
+	year = {2014},
+	howpublished = {http://www.html5rocks.com/en/tutorials/webcomponents/shadowdom-201/}
 }
