--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -34,7 +34,7 @@
 
 \usepackage{url}		% Allows good typesetting of web URLs.
 
-\usepackage[backend=biber,url=false,citestyle=numeric,firstinits=true]{biblatex}
+\usepackage[backend=biber,url=false,citestyle=numeric,firstinits=false]{biblatex}
 \usepackage{citesort}         	% 
 
 \addbibresource{diss.bib}
