--- a/latex/chapter-background.tex
+++ b/latex/chapter-background.tex
@@ -3,12 +3,12 @@
 @\emph{Background}}%
 
 When the Web was first created by Tim Berners-Lee in 1989, web pages were largely envisioned as static \textit{documents} with a single author or a small group of coordinating authors. 
-The idea of composing a complex web application out of simple components like snapping together Lego blocks seemed like a distant dream at best.
+The idea of composing a complex web application out of basic components like snapping together Lego blocks seemed like a distant dream at best.
 Until recently, web authors were limited to using the predefined HTML layout elements or `tags' that were listed in the W3C standard and understood by browser programs, such as \tcode{<title>} and \tcode{<video>}. 
 Creating your own \textit{sui generis} HTML elements with unique behaviors seemed beyond the capabilities of the web browsers of the day like Mosaic and Netscape Navigator.
 
 As of early 2015, modern web apps are typically written with a Javascript framework that provides a cohesive set of structures, design patterns and practices designed to facilitate composing web applications, large or small, from a number of sub-components.
-Angular, Meteor, and Backbone are three such frameworks.
+Angular, Meteor, and Backbone are three such frameworks~\cite{dickey2014}.
 The difference between a `framework' and a library is somewhat arbitrary, but typically frameworks are more comprehensive than narrowly focused utility libraries.
 Yet all frameworks must exist within the confines of the programming model provided by the browser and the Document Object Model (DOM). 
 In this model, the entire web page or app belongs to a single `document', constituent parts are not encapsulated or isolated from each other, and authors are limited to working with the predefined HTML tags.
@@ -20,13 +20,11 @@ among different users who may not use the same frameworks or follow the same set
 In object oriented programming, encapsulation is typically defined as a 
 ``language mechanism for restricting access to some of the object's components''
 ~\cite[p. 522]{mitchell2003}.
-The point of encapsulation is providing an \textit{abstraction} that consumers of the functionality can rely on without knowing internals. 
+The point of encapsulation is providing an \textit{abstraction} that consumers of the functionality can rely on without knowing the internals. 
 The goals of encapsulation and abstraction include:
 \begin{quote}
-Identifying the interface of a data structure \dots 
-providing \textit{information hiding} by separating implementation decisions from parts of the program that use the data structure \dots 
-and allowing the data structure to be used in many different ways by many different components.
-\cite[p. 243]{mitchell2003}
+Identifying the interface of a data structure~\dots~providing \textit{information hiding} by separating implementation decisions from parts of the program that use the data 
+structure~\dots~and allowing the data structure to be used in many different ways by many different components~\cite[p. 243]{mitchell2003}.
 \end{quote}
 
 Although techniques of abstraction and encapsulation have been widespread in object oriented programming for decades,
@@ -36,7 +34,7 @@ To illustrate how these problems affect the ability of authors to share and reus
 Twitter Bootstrap is a collection of Cascading Style Sheet (CSS) rules and Javascript widgets or components designed to allow web authors to quickly `bootstrap' an attractive, consistent look-and-feel onto a web page.
 Bootstrap provides pre-styled User Interface (UI) widgets such as menus, buttons, panels, dropdown selectors, alerts, dialogs, and so on, to be used as building blocks to construct web sites or application user interfaces.
 Because Bootstrap must work within the confines of the DOM and the HTML5 standard, this necessarily exposes a great deal of Bootstrap's internals to its users.
-For example, to add a Bootstrap site navigation bar to your page, you must essentially copy and paste a large block of HTML and then customize it to your needs as shown in figure~\ref{f:twbs1}.
+For example, to add a Bootstrap site navigation bar to your page, you must essentially copy and paste a large block of HTML and then customize it to your needs as shown in Figure~\ref{f:twbs1}.
 
 % 
 \begin{figure}[htb]
@@ -49,15 +47,12 @@ For example, to add a Bootstrap site navigation bar to your page, you must essen
 
 This forces Bootstrap's users to tightly couple the layout of their page with the internal structure required by Bootstrap's navigation bar widget. 
 This coupling militates against Bootstrap significantly refactoring the internal structure of the navigation widget because that would require a large community of developers to update their applications accordingly.
-In addition, because CSS rules normally apply across the entire page, the authors of Bootstrap must carefully select the scope and nomenclature of all rules to ensure minimal interference with other components and unintended effects. 
+In addition, because CSS rules normally apply across the entire page, the authors of Bootstrap must carefully select the scope and nomenclature of all rules to ensure minimal interference with other components and unintended effects~\cite{walton2014}. 
 Even then, conflicts are inevitable when the entire page is treated as a single sandbox and you combine components from many different vendors. 
 
 What if instead one could create and share a reusable chunk of functionality --- a web component -- that hid all of these tedious structural details and encapsulated its private, internal state? 
 What if web authors could create their \textit{own} HTML elements?  
-Using Bootstrap's navigation bar could be as simple as replacing the code in figure~\ref{f:twbs1} with a custom element like the one in 
-% figure~\ref{f:twbs2}.
-%listing~\ref{l:twbs2}.
-the following example:
+Using Bootstrap's navigation bar could be as easy as replacing the code in figure~\ref{f:twbs1} with a custom element like the one in the following example:
 
 % 
 %\begin{figure}[htb]
@@ -67,8 +62,6 @@ the following example:
 %\label{f:twbs2}
 %\end{figure}
 %\index{commands!environments!figure}%
-
-% TODO: replace that with a regular listing?
 
 \begin{lstlisting}[language=HTML5,numbers=none,caption=
 {Hypothetical Bootstrap nav bar custom element.},label=l:twbs2,captionpos=below]
@@ -81,10 +74,11 @@ the following example:
 
 \subsection{Encapsulation and composition}
 
-The Web Components working group, consisting of software engineers from several major browser vendors, looked at this situation and found that, in practice, browsers already had a suitable model for encapsulating components that hide complexity behind well-defined interfaces.
+The Web Components working group, consisting of software engineers from several major browser vendors, 
+looked at this situation and found that, in practice, browsers already had a suitable model for encapsulating components that hide complexity behind well-defined interfaces.
 That model was that one used internally by browsers to implement the newer HTML5 tags like the \textbf{\tcode{<video>}} element. 
 The \tcode{<video>} element presents a simple interface (API) to HTML authors that hides the complexities of playing high definition video.
-Internally, however, browsers implement \tcode{<video>} with a `shadow' or hidden document inside the object that contains the internal state. 
+Internally, however, browsers implement \tcode{<video>} with a `shadow' or hidden document inside the object that contains the internal state~\cite{kitamura2014}. 
 For example, an author can write:
 \begin{lstlisting}[language=HTML5,numbers=none]
 	<video loop src=...> </video>
@@ -104,7 +98,7 @@ Figure~\ref{f:html5video} illustrates how this works. It shows the shadow (inter
 \end{figure}
 \index{commands!environments!figure}%
 
-This example illustrates two design principles that are widely followed in other areas of software engineering [CITE]:
+This example illustrates two design principles that are widely followed in other areas of software engineering~\cite{fowler2012}:
 \begin{itemize}
 \item Use \textbf{encapsulation} and well defined interfaces, as the \tcode{<video>} element does, to protect private state, hide implementation complexity, and leave implementors free to refactor internals.
 \item Prefer \textbf{composition} or \textit{has-a} relationships over inheritance or \textit{is-a} relationships when building modules. 
@@ -120,18 +114,21 @@ The question remains, which specific browser internals must be exposed and stand
 \section{Web Components}
 
 The Web Component initiative consists of two main technologies and two supporting features. 
-Custom HTML Elements and Shadow DOM are the two key players while HTML Imports and Templates support these features. One of the central goals of the Web Components initiatives is to maintain interoperability across different browsers and frameworks, so that modules which adhere to the Web Components standard can provide a consistent experience no matter what framework the developer chooses or which browser the user selects.
+Custom HTML Elements and Shadow DOM are the two key players while HTML Imports and Templates support these features. 
+One of the central goals of the Web Components initiatives is to maintain interoperability across different browsers and frameworks, 
+so that modules which adhere to the Web Components standard can provide a consistent experience no matter what framework the developer chooses or which browser the user selects.
+For example, an important benefit of Custom Elements is that they \textit{are} standard HTML elements; they live in the DOM and can be accessed by the usual DOM methods and the majority of standard HTML/JS development tools~\cite{penades2015}.
+They also behave somewhat like objects in traditional object oriented programming (OOP) in that 
+they have \textit{methods} and hidden internal \textit{state} (data).
 
 \subsection{Custom HTML elements}
 Never before have web authors been able to define their own custom HTML elements that were not found in the official list.
 Actually, many authors and web frameworks have been doing exactly that for years, primarily for internal purposes where the custom elements are pre\-processed and compiled down to standard HTML.
 The custom elements would not get sent to the end user's browser because it would not know what to do with them.
-Technically, the DOM has long supported creating custom-named elements, but it was not possible to do much with them because they were treated like an ordinary \tcode{<span>}.
-However the possibility now exists to create custom elements in a standard way that will work consistently across browsers. 
-
-TODO: Custom elements:
-
-\url{http://www.w3.org/TR/custom-elements/}
+Technically, the DOM has long supported creating custom-named elements, but it was not possible to do much with them because they were treated like an ordinary 
+\tcode{<span>}~\cite{w3ccontributors2015-b}.
+However the possibility now exists to create custom elements in a standard way that will work consistently across browsers with the W3C Custom Element 
+specification~\cite{w3ccontributors2015-b}. 
 
 The primary restriction is that all custom elements must have a \texttt{-} character (dash) in their name, such as \tcode{<my-element>}. 
 This is to avoid a name collision with future built-in HTML elements. 
@@ -157,64 +154,57 @@ or imperatively with Javascript:
  document.body.appendChild(thisOne); // add to the <body>
 \end{lstlisting}
 
-With a simple example like this the result does not look all that different from a \tcode{<span>}.
+With a quick example like this the result does not look all that different from a \tcode{<span>}.
 To do something more interesting with your custom element you will need to the other features of Web Components: Shadow DOM, templates and imports.
 
 \subsection{Shadow DOM}
-Shadow DOM encapsulates the internal structure of an element. 
-As we have seen, browsers use Shadow DOM to encapsulate the private state of standard elements like \tcode{<video>} but now this capability is extended to custom-defined elements.
+Shadow DOM encapsulates the internal structure of an element~\cite{w3ccontributors2015}. 
+As we have seen, browsers already use Shadow DOM to encapsulate the private state of standard elements like \tcode{<video>} but now this capability is extended to custom-defined elements.
 
-TODO: 
-
-\url{http://www.w3.org/TR/shadow-dom/}
-
-You can think of Shadow DOM like an HTML fragment inside an element that describes its external appearance without exposing these structural details\footnote{
-Shadow DOM should not be confused with the React framework's Virtual~DOM concept, which is closer in nature to HTML5 Templates than Shadow DOM.
-}. Typically a custom element definition has a template (more on these in a moment) which produces the shadow DOM necessary to render the element.
+You can think of shadow DOM like an HTML fragment inside an element that describes its external appearance without exposing these structural details\footnote{
+HTML5 Shadow~DOM should not be confused with the React framework's \textbf{Virtual}~DOM, which is conceptually closer to HTML5 Templates in nature than Shadow DOM.}. 
+Typically a custom element definition has a template (more on these in a moment) which produces the shadow DOM necessary to render the element.
 The actual contents of the shadow DOM are just ordinary elements.
+Any element (whether custom or not) can have zero, one, or more shadow DOM trees attached.
 
-Custom elements can wrap regular text, normal HTML elements, or other custom elements and then project that content into its own internal structure.
-In the example in figure~\ref{f:twbs2} above, a simple \tcode{<twbs-navbar>} element consumes a set of three \tcode{<a>} (anchor or link) elements
-but internally transforms that to something like the example in figure~\ref{f:twbs1}, 
+Custom elements can wrap regular text, normal HTML elements, other custom elements, or nothing at all,
+and then project that content through its shadow DOM, 
+therefore its visual representation.
+In the example in Listing~\ref{l:twbs2} above, 
+a \textbf{\tcode{<twbs-navbar>}} element consumes a set of three 
+\textbf{\tcode{<a>}} (anchor or link) elements but internally transforms that to something like the example in figure~\ref{f:twbs1}, 
 projecting the set of links into the nav menu structure with appropriate wrappers.
 
 The \tcode{<content>} tag is used inside a custom element's template to indicate the spot where the consumed (wrapped) content should be \textit{projected}. 
-This wrapped content is known as \textit{light DOM}, because it's given by the user and projected through into the shadow.
-Together the shadow DOM and light DOM form the \textit{logical DOM} of a custom element.
+This wrapped content is known as 
+\textit{light DOM}\index{Light DOM}, 
+because it's given by the user and projected through into the shadow.
+Together the shadow DOM and light DOM form the \textit{logical DOM}\index{Logical DOM} of a custom element.
 It is also possible for elements to have multiple shadow DOM sub-trees. 
 This is used particularly for emulating object-oriented-like inheritance relationships between custom elements.
 
-In languages like C\# and Java, the encapsulation of classes and the protection of private object fields are a relatively strong guarantee by the language.
-But in the case of Web Components, Shadow DOM is not completely and utterly isolated from the containing page.
+In languages like C\#\index{C\#} and Java\index{Java}, the encapsulation of classes and the protection of private object fields are a relatively strong guarantee by the language.
+But in the case of Web Components, shadow DOM is not completely and utterly isolated from the containing page.
 It is possible to ``reach inside'' and break encapsulation to at least some degree, 
-but the point is that this must be an intentional act by the developer and not an unexpected side-effect.
+but the point is that this must be an intentional act by the developer and not an unexpected side-effect~\cite{bidelman2014}.
 
 \subsection{HTML Imports}
 One significant problem faced by web developers is the lack of any built-in packaging system for modules in HTML.
-Prior to Web Components there was no way to import a snippet of HTML or Javascript from an external location and insert it exactly one time into the current document, similar to an \tcode{\#include} directive in the C language or the packaging and import systems popular in scripting languages like Python, Go and Ruby. 
+Prior to Web Components there was no way to import a snippet of HTML or Javascript from an external location and insert it exactly one time into the current document, 
+similar to an \tcode{\#include} directive in the C language or the packaging and import systems popular in scripting languages like Python, Go and Ruby. 
 Javascript could always be loaded with a \tcode{<script>} tag like usual, but this did not ensure that resources were loaded and executed exactly once, a process known as \textit{de-duping}.
 A component that uses a certain JS resource might be found in two different spots on the page but that resource would be requested from the server twice, degrading application performance.
 
-In order to fix these problems the HTML Imports standard allows for bringing in snippets of HTML, CSS or Javascript into the current document in a way that ensures automatic de-duping of repeated requests.
-The one major caveat is that de-duping only happens if the resources are named in exactly the same fashion in each case.
+In order to fix these problems the HTML Imports standard allows for bringing in snippets of HTML, CSS or Javascript into the current document in a way that ensures automatic de-duping of repeated requests~\cite{w3ccontributors2015-a}.
+The one major caveat is that de-duping only happens if the resources are named in exactly the same fashion in each case~\cite{bidelman2013}.
 Dealing with HTML Imports in a consistent fashion will be discussed in the Implementation section.
-
-TODO: HTML imports:
-
-\url{http://www.w3.org/TR/html-imports/}
-
-\url{http://www.html5rocks.com/en/tutorials/webcomponents/imports/}
-
 
 \subsection{Templates}
 The last major piece of the Web Component puzzle is the native HTML5 \tcode{<template>} tag. 
-Unlike the rest of Web Components, \tcode{<template>} has already become a standard part of the HTML5 specification, although one that is not yet widely used outside of WC.
+Unlike the rest of Web Components, \tcode{<template>} has already become a standard part of the HTML5 specification~\cite{w3ccontributors2015-c}, 
+although one that is perhaps not widely used yet outside of WC.
 \textit{Template} is a frequently overloaded word with different meanings in different programming environments.
 While HTML5 templates have some similarities to the concept of templates popularized by frameworks like Angular and Django, there are some important differences.
-
-TODO: Template elements:
-
-\url{http://www.w3.org/TR/html5/scripting-1.html#the-template-element}
 
 HTML5 templates are inert hunks of HTML embedded in the page that can be instantiated into `real' elements by Javascript.
 Their basic function is to give a template for custom element representation.
@@ -237,8 +227,6 @@ Data-bound templates are discussed in more detail in the following chapter.
 The primary benefit of HTML Templates from a performance perspective is that external resources referenced from the template (images, stylesheets, etc) will not be fetched until the template is actually instantiated.
 Templates are often used to declare the internal structure (shadow DOM) of custom elements. 
 Therefore the resources needed to use the custom element aren't downloaded until they are actually needed, which is necessary when composing a large application out of numerous distinct elements.
-
-% http://www.w3.org/TR/html5/scripting-1.html#the-template-element
 
 
 \subsection{Related technologies}
@@ -296,7 +284,7 @@ A team within Google has developed the Polymer~\cite{polymercontributors2015} fr
 
 \section{Speakur}
 My desire to learn more about modern web development led me to investigate web frameworks like Angular and Meteor.
-I spent some time building (very) simple demos with these two frameworks in particular.
+I spent a few weeks building elementary demos with these two frameworks in particular.
 Although they are expressive and powerful, and are used every day to power high-traffic applications, 
 I was unhappy with the non-standard and idiosyncratic nature of these frameworks. 
 They relied on `proprietary' (even if open source) extensions that were not native to HTML and not easily transportable across different frameworks and architectures.
@@ -304,7 +292,7 @@ This dissatisfaction led me to learn about the Web Components initiative.
 
 \subsection{Origin}
 Learning about Web Components quickly led me to the Polymer project.
-I wanted a component that demonstrated common use cases for Web Components and also showed off some of the design possibilities provided by Polymer and Material Design.
+I wanted a component that demonstrated common use cases for Web Components and also showed off some of the design possibilities provided by Polymer and Material Design~\cite{imura2015}.
 I was also intrigued by the possibilities of a server-free design afforded by Firebase.
 Some kind of `live' social plugin seemed like a natural fit for the capabilities of Polymer and Firebase, so this led to a discussion plugin for blogs and other articles.
 My hope was that it would required little or nothing in the way of dedicated server resources in order to actually use it. 
