Working on chapter 2, background.

--- a/latex/chapter-approach.tex
+++ b/latex/chapter-approach.tex
@@ -5,10 +5,10 @@
 \section{Functionality}
 
 \section{Architecture Overview}
-Roy Fielding, the influential author of the REST web architecture, wrote that
+Roy Fielding, the author of the influential REST web architecture, described a software architecture as:
 
 \begin{quote}
-a software architecture is an abstraction of the run-time elements of a software system during some phase of its operation. A system may be composed of many levels of abstraction and many phases of operation, each with its own software architecture.
+An abstraction of the run-time elements of a software system during some phase of its operation. A system may be composed of many levels of abstraction and many phases of operation, each with its own software architecture.
 
 At the heart of software architecture is the principle of abstraction: hiding some of the details of a system through encapsulation in order to better identify and sustain its properties. A complex system will contain many levels of abstraction, each with its own architecture.~\cite{fielding2000}
 \end{quote}
