--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -214,7 +214,6 @@ complement to the modularity and portability of native {HTML} Web Components.},
 	author = {Google Developers},
 	month = mar,
 	year = {2015},
-	note = {00000},
 	howpublished = {http://googlewebmastercentral.blogspot.com/2015/03/easier-website-development-with-web.html}
 },
 
@@ -360,7 +359,6 @@ complement to the modularity and portability of native {HTML} Web Components.},
 	author = {Santiago Esteva},
 	month = mar,
 	year = {2015},
-	note = {00002},
 	howpublished = {{http://ng-learn.org/2014/03/AngularJS-2-Status-Preview/}}
 },
 
@@ -508,4 +506,52 @@ the community can benefit from them as well.},
 	month = apr,
 	year = {2014},
 	howpublished = {http://www.html5rocks.com/en/tutorials/webcomponents/shadowdom-201/}
+},
+
+@online{w3ccontributors2014,
+	title = {Mutation Observers},
+	url = {http://www.w3.org/TR/dom/#mutation-observers},
+	abstract = {A {MutationObserver} object can be used to observe mutations to the tree of nodes.},
+	author = {{W3C} contributors},
+	month = jul,
+	year = {2014},
+	howpublished = {{http://www.w3.org/TR/dom/\#mutation-observers}}
+},
+
+@online{addyosmani2014,
+	title = {Detect, Undo And Redo {DOM} Changes With Mutation Observers},
+	url = {http://addyosmani.com/blog/mutation-observers/},
+	author = {Addy Osmani},
+	month = jun,
+	year = {2014},
+	howpublished = {http://addyosmani.com/blog/mutation-observers/}
+},
+
+@online{googledevelopers2014,
+	title = {{Model-Driven} Views},
+	url = {http://mdv.googlecode.com/svn/trunk/docs/model.html},
+	abstract = {The first primitive in the {MDV} design is a Model abstraction which creates a mechanism through which mutations to objects can be expressed directly, but allows observers to be notified when mutations occur.},
+	author = {Google Developers},
+	month = jul,
+	year = {2014},
+	howpublished = {http://mdv.googlecode.com/svn/trunk/docs/model.html}
+},
+
+@online{matthiasgelbmann2012,
+	title = {Why {jQuery} is the Most Popular {JavaScript} Library},
+	url = {http://w3techs.com/blog/entry/jquery_now_runs_on_every_second_website},
+	author = {Matthias Gelbmann},
+	month = aug,
+	year = {2012},
+	howpublished = {http://w3techs.com/blog/entry/jquery\_now\_runs\_on\_every\_second\_website}
+},
+
+@online{w3ccontributors2013,
+	title = {Selectors {API}},
+	url = {http://www.w3.org/TR/selectors-api/},
+	abstract = {Selectors, which are widely used in {CSS}, are patterns that match against elements in a tree structure {[SELECT][CSS21].} The Selectors {API} specification defines methods for retrieving Element nodes from the {DOM} by matching against a group of selectors. It is often desirable to perform {DOM} operations on a specific set of elements in a document. These methods simplify the process of acquiring specific elements, especially compared with the more verbose techniques defined and used in the past.},
+	author = {{W3C} contributors},
+	month = feb,
+	year = {2013},
+	howpublished = {{http://www.w3.org/TR/selectors-api/}}
 }
