--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -39,7 +39,6 @@
 
 \addbibresource{diss.bib}
 
-
 % Prestons code listing definitions
 \input{codelistings}
 
@@ -438,6 +437,8 @@ Subsidiary topics include assessing the maturity and suitability of current Web 
                 % explicitly cited in the text. 		     %
 		%						     %
 
+%\renewcommand*{\bibfont}{\raggedright}
+\setlength{\bibitemsep}{6pt}
 \printbibliography
 %\bibliographystyle{plain}  % Here the bibliography 		     %
 %\bibliography{diss}        % is inserted.			     %
