--- a/latex/chapter-background.tex
+++ b/latex/chapter-background.tex
@@ -125,9 +125,9 @@ they have \textit{methods} and hidden internal \textit{state} (data).
 Never before have web authors been able to define their own custom HTML elements that were not found in the official list.
 Actually, many authors and web frameworks have been doing exactly that for years, primarily for internal purposes where the custom elements are pre\-processed and compiled down to standard HTML.
 The custom elements would not get sent to the end user's browser because it would not know what to do with them.
-Technically, the DOM has long supported creating custom-named elements, but it was not possible to do much with them because they were treated like an ordinary 
-\tcode{<span>}~\cite{w3ccontributors2015-b}.
-However the possibility now exists to create custom elements in a standard way that will work consistently across browsers with the W3C Custom Element 
+In addition, the DOM has long supported creating custom-named elements, but it was not possible to do much interesting with them because they were treated like an ordinary 
+\tcode{<span>} element~\cite{w3ccontributors2015-b}.
+However, the possibility now exists to create custom elements in a standard way that will work consistently across browsers with the W3C Custom Element 
 specification~\cite{w3ccontributors2015-b}. 
 
 The primary restriction is that all custom elements must have a \texttt{-} character (dash) in their name, such as \tcode{<my-element>}. 
@@ -201,17 +201,18 @@ Dealing with HTML Imports in a consistent fashion will be discussed in the Imple
 
 \subsection{Templates}
 The last major piece of the Web Component puzzle is the native HTML5 \tcode{<template>} tag. 
-Unlike the rest of Web Components, \tcode{<template>} has already become a standard part of the HTML5 specification~\cite{w3ccontributors2015-c}, 
-although one that is perhaps not widely used yet outside of WC.
+Unlike the rest of Web Components, \tcode{<template>} has already become a standard part of the HTML5 specification, 
+although one that is perhaps not widely used yet outside of WC~\cite{w3ccontributors2015-c}.
 \textit{Template} is a frequently overloaded word with different meanings in different programming environments.
-While HTML5 templates have some similarities to the concept of templates popularized by frameworks like Angular and Django, there are some important differences.
+While HTML5 templates have some similarities to the concept of templates popularized by frameworks like Angular\index{Angular} and Django\index{Django}, there are some important differences.
 
 HTML5 templates are inert hunks of HTML embedded in the page that can be instantiated into `real' elements by Javascript.
 Their basic function is to give a template for custom element representation.
 
 However, templates are most useful in combination with `live' data, not static, unchanging text.
-Binding data into templates with special operators\footnote{
+Binding data into templates with special operators,\footnote{
 Sometimes called mustaches, handlebars or curly braces. }
+also known as a Model-Driven View,
 is \textbf{not} a part of the standard HTML5 template spec.
 The following example of a data bound template is something that does \textit{not} work with plain Web Components alone:
 
@@ -221,6 +222,7 @@ The following example of a data bound template is something that does \textit{no
 	</template>
 \end{lstlisting}
 
+Google engineers have advanced a proposal for standardizing Model-Driven Views but it is not yet part of the standard \tcode{<template>} element~\cite{googledevelopers2014}.
 Instead this functionality can be handled by a Javascript framework such as React or Polymer.
 Data-bound templates are discussed in more detail in the following chapter.
 
@@ -229,43 +231,60 @@ Templates are often used to declare the internal structure (shadow DOM) of custo
 Therefore the resources needed to use the custom element aren't downloaded until they are actually needed, which is necessary when composing a large application out of numerous distinct elements.
 
 
-\subsection{Related technologies}
+\section{Related W3C initiatives}
 There are a number of related W3C initiatives for web standards. 
 Sometimes these are loosely grouped under the label Web Components,
-and they do help support componentization, 
-but they are separate part of the HTML5 standard.
+and they do support componentization in web application design, 
+but they are a separate part of the HTML5 standard.
+These include mutation observers, DOM selectors, and so-called ``responsive'' attributes designed to adjust the layout automatically according to screen size.
+All of these techniques have been used extensively in Speakur.
 
-Mutation observers:
+\subsection{Mutation Observers}
+For example, \textit{mutation observers}\index{Mutation Observers}
+allow a component to register a `callback' function to observe and react to any changes in the state of an area of interest in the DOM, 
+whether that change was generated by a user action or another 
+component~\cite{w3ccontributors2014}.
+This helps decouple components by allowing them to react asynchronously to changes in each other's public state without directly interconnecting the components.
+The observers ``deliver mutations in batches asynchronously at the end of a micro-task rather than immediately after they occur''~\cite{addyosmani2014}.
+This helps performance and user experience (UX) by ensuring that the callback is only called ``as-needed'' rather than once for each small change.
 
-\url{http://www.w3.org/TR/dom/#mutation-observers}
+\subsection{Selectors}
+Another standardization initiative is in the area of DOM / CSS \textit{selectors}\index{Selectors},
+as popularized by the extremely widespread jQuery\index{jQuery} library,
+written by John Resig\index{John Resig} 
+and used in half of all major websites as of 2012~\cite{matthiasgelbmann2012}.
+The Selector API was officially standardized in 2013 and browser support is good in current versions~\cite{w3ccontributors2013}.
 
-Model driven views:
-
-\url{http://mdv.googlecode.com/svn/trunk/docs/design_intro.html}
-
-Pointer events:
-
-\url{http://www.w3.org/TR/pointerevents/}
-
-Web animations:
-
-\url{http://www.w3.org/TR/web-animations/}
-
-Selectors  (similar to jQuery selectors)
-
-\url{http://www.w3.org/TR/selectors-api/}
+Selectors allow you to quickly find DOM elements based on a `selector' --- a rule-based description string -- to perform further operations on their state such as reading or modifying, or observing future changes, attaching animations, and so on. 
+The following example shows how to populate a JS variable with the element that has the \tcode{id} attribute equal to \tcode{some-id}:
 
 \begin{lstlisting}[language=JavaScript,numbers=none]
-	// find an element based on 'id' attribute.
+	// find an element whose id is equal to 'some-id'
 	var someElem = document.querySelector("#some-id");
 \end{lstlisting}
 
-\textit{Placeholder Notes}:
-A significant problem with 'web components' story - scoping!  
-There is just one global scope on the page.
-This leads to the practice of 'prefixing as poor man's scope'.  
-E.g. instead of facebook providing a <like-button> element, they provide <facebook-like-button>.
-apparently this may be an area of future development  (citation?)
+
+%Pointer events:
+
+% \url{http://www.w3.org/TR/pointerevents/}
+
+% Web animations:
+
+% \url{http://www.w3.org/TR/web-animations/}
+
+% Selectors  (similar to jQuery selectors)
+
+% rl{http://www.w3.org/TR/selectors-api/}
+
+
+%\textit{Placeholder Notes}:
+%A significant problem with 'web components' story - scoping!  
+%There is just one global scope on the page.
+%This leads to the practice of 'prefixing as poor man's scope'.  
+%E.g. instead of facebook providing a <like-button> element, they provide <facebook-like-button>.
+%apparently this may be an area of future development  (citation?)
+
+\subsection{Responsive Layout}
 
 Flex boxes layout: intended for smaller page components...
 
@@ -277,9 +296,8 @@ CSS Grid layout intended for overall page layout...
 \url{http://www.w3.org/TR/css3-grid-layout/}
 
 
-\section{Literature Review}
-\subsection{Javascript frameworks}
-\subsection{Polymer framework}
+\section{Polymer Framework}
+
 A team within Google has developed the Polymer~\cite{polymercontributors2015} framework based on Web Components architecture.
 
 \section{Speakur}
